contact us added

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -132,15 +132,169 @@
 <section class="w-full flex flex-col">
     <div class="w-full flex flex-col justify-between mt-[100px]">
         <div class="w-full flex flex-row justify-start mt-[50px]">
-            <div class="py-[2px] px-[10px] mr-8 border-[1px] border-[#191A23] flex justify-center items-center rounded-[14px] bg-black text-[#fff] text-[16px]">
+            <div
+                class="py-[2px] px-[10px] mr-8 border-[1px] border-[#191A23] flex justify-center items-center rounded-[14px] bg-black text-[#fff] text-[16px]">
                 Our Working Process
             </div>
             <span class="py-[2px] px-[5px] text-[14px]">
-                Step-by-Step Guide to <br/> Achieving Your Business Goals
+                Step-by-Step Guide to <br /> Achieving Your Business Goals
             </span>
         </div>
         <div class="w-full">
             <app-accodian></app-accodian>
+            <app-accodian></app-accodian>
+            <app-accodian></app-accodian>
+            <app-accodian></app-accodian>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="w-full flex flex-col justify-between mt-[100px]">
+        <div class="w-full flex flex-row justify-start">
+            <div
+                class="py-[2px] px-[10px] mr-8 border-[1px] border-[#191A23] flex justify-center items-center rounded-[14px] bg-black text-[#fff] text-[16px]">
+                Our Working Process
+            </div>
+            <span class="py-[2px] px-[5px] text-[14px]">
+                Explore Real-Life Examples of <br />Our Proven Digital Marketing Success through Our Case Studies
+            </span>
+        </div>
+        <div class="w-full flex flex-row gap-5 bg-black p-10 rounded-[45px] mt-[100px]">
+            <div class="flex flex-col w-[33%] border-r-2 px-[10px]">
+                <p class="text-[#FFF] ">
+                    For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in
+                    website traffic and a 25% increase in sales.
+                </p>
+                <p class="flex justify-start items-center text-[#fff]">
+                    Learn More
+                    <span class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="16" fill="#25B1C4"
+                            class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z" />
+                        </svg>
+                    </span>
+
+                </p>
+            </div>
+            <div class="flex flex-col w-[33%] border-r-2 px-[10px]">
+                <p class="text-[#FFF] ">
+                    For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for
+                    key keywords and a 200% increase in organic traffic.
+                </p>
+                <p class="flex justify-start items-center text-[#fff]">
+                    Learn More
+                    <span class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="16" fill="#25B1C4"
+                            class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z" />
+                        </svg>
+                    </span>
+
+                </p>
+            </div>
+            <div class="flex flex-col w-[33%] px-[10px]">
+                <p class="text-[#FFF] ">
+                    For a national retail chain, we created a social media marketing campaign that increased followers
+                    by 25% and generated a 20% increase in online sales.
+                </p>
+                <p class="flex justify-start items-center text-[#fff]">
+                    Learn More
+                    <span class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="16" fill="#25B1C4"
+                            class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z" />
+                        </svg>
+                    </span>
+
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="w-full flex flex-col justify-between mt-[100px]">
+        <div class="w-full flex flex-row justify-between">
+            <div class="w-[48%] flex flex-col justify-start">
+                <div
+                    class="px-[15px] py-[10px] bg-[#000] rounded-[45px] flex justify-center items-center text-white text-[20px]">
+                    Our Products</div>
+                <div class="px-[10px] my-[50px]">
+                    <p>
+                        Clumps Software Solutions is a leading provider of cutting-edge software solutions designed to
+                        streamline and enhance your business operations. With a team of experienced professionals and a
+                        portfolio of robust products, we are committed to helping businesses achieve their goals and
+                        thrive in today's digital landscape.
+                    </p>
+                </div>
+            </div>
+            <div class="w-[48%] flex flex-col gap-5">
+                <app-card></app-card>
+                <app-card></app-card>
+                <app-card></app-card>
+                <app-card></app-card>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+<section>
+    <div class="w-full flex flex-col justify-between mt-[100px]">
+        <div class="w-full flex flex-row justify-between">
+            <div class="w-[48%] flex flex-col gap-5">
+                <app-card></app-card>
+                <app-card></app-card>
+                <app-card></app-card>
+                <app-card></app-card>
+            </div>
+            <div class="w-[48%] flex flex-col justify-start">
+                <div
+                    class="px-[15px] py-[10px] bg-[#000] rounded-[45px] flex justify-center items-center text-white text-[20px]">
+                    Our Services</div>
+                <div class="px-[10px] my-[50px]">
+                    <p>
+                        At Clumps Software Solutions, we are passionate about driving your business's success through
+                        innovative solutions and exceptional services. With a team of tech-savvy experts and creative
+                        minds, we offer a comprehensive range of services to elevate your brand and expand your digital
+                        reach.
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</section>
+<section class="w-full flex flex-col">
+    <div class="w-full flex flex-col justify-between mt-[100px]">
+        <div class="w-full flex flex-row justify-start mt-[50px]">
+            <div
+                class="px-[22px] py-[5px] mr-8 border-[1px] border-[#191A23] flex justify-center items-center rounded-[14px] bg-black text-[#fff] text-[16px]">
+                Contact Us
+            </div>
+            <span class="py-[2px] px-[5px] text-[14px]">
+                Connect with Us: <br/>Let's Discuss Your Digital Marketing Needs
+            </span>
+        </div>
+        <div class="w-[100%] p-20px mt-[100px] flex flex-row">
+            <div class="w-[50%] p-20px">
+                <app-contact-us></app-contact-us>
+            </div>
+            <div class="w-[50%] p-20px mt-[100px] flex flex-col justify-center items-end">
+                <div class="w-auto">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="253" height="253" viewBox="0 0 253 253" fill="none">
+                        <path d="M171.102 82.0649L252.777 126.566L171.102 171.425L126.422 252.922L81.7418 171.425L0.0665586 126.566L81.7418 82.0649L126.422 0.210938L171.102 82.0649Z" fill="#191A23"/>
+                      </svg>
+                </div>
+                <div class="w-auto float-left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="142" height="143" viewBox="0 0 142 143" fill="none">
+                        <path d="M95.7147 46.596L141.422 71.4997L95.7147 96.6035L70.7109 142.21L45.7072 96.6035L0.000260592 71.4997L45.7072 46.596L70.7109 0.789062L95.7147 46.596Z" fill="#25B1C4"/>
+                      </svg>
+                </div>
+            </div>
         </div>
     </div>
 </section>
