contact us added 3

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,10 +14,10 @@
                 a consultation </button>
         </div>
         <div class="w-full md:w-[58%] flex justify-end">
-            <img src="{{hostUrl}}assets/frontent_files/img/homepage/homepage-img-one.png" />
+            <img src="{{hostUrl}}assets/frontent_files/img/homepage/homepage-img-one.png" alt="homepage" data-aos="zoom-in" data-aos-duration="1000" />
         </div>
     </div>
-    <div class="w-full flex flex-row justify-evenly mt-[150px]">
+    <div class="w-full flex flex-row justify-evenly mt-[150px]" data-aos="flip-up">
         <svg xmlns="http://www.w3.org/2000/svg" width="125" height="48" viewBox="0 0 125 48" fill="none" data-aos="flip-up">
             <g style="mix-blend-mode:luminosity">
                 <path fill-rule="evenodd" clip-rule="evenodd"
