--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="body">
-    <router-outlet></router-outlet>
+    <router-outlet (activate)="onActivate()"></router-outlet>
     <app-footer></app-footer>
 </div>
 
