--- a/src/app/pages/home/card/card.component.html
+++ b/src/app/pages/home/card/card.component.html
@@ -1,12 +1,19 @@
-<div *ngFor="let item of services" class="w-full flex flex-row justify-between items-center border-2 rounded-[45px] px-[15px] py-[10px]"  data-aos="fade-left">
-    <div class="w-[80%] flex flex-row justify-start items-center gap-4">
-        <span class="text-black font-semibold text-[20px]">{{item.id}}</span>
-        <p class="text-black font-semibold text-[16px]">{{item.name}}</p>
+<a routerLink="/{{item.URL}}"*ngFor="let item of services">
+    <div 
+        class="w-full flex flex-row justify-between items-center border-2 rounded-[45px] px-[15px] py-[10px] hover:shadow-lg cursor-pointer scale-100"
+        data-aos="fade-left">
+
+        <div class="w-[90%] flex flex-row justify-start items-center gap-4">
+            <p class="text-black font-semibold hover:text-[#33B5CC] text-[20px]">{{item.id}}</p>
+            <p class=" w-full text-black hover:text-[#33B5CC] font-semibold text-[16px]">{{item.name}}</p>
+        </div>
+        <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
+            </svg>
+
+        </div>
     </div>
-    <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-            <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
-          </svg>
-    </div>
-</div>
+</a>
