media work by rudhi

--- a/src/app/pages/home/accodian/accodian.component.html
+++ b/src/app/pages/home/accodian/accodian.component.html
@@ -1,5 +1,5 @@
 <div
-class="w-full mt-5 border-[2px] border-[#33B5CC] rounded-[45px] shadow-[0px_5px_0px_0px_#33B5CC] " data-aos="fade-left" [style.background-color]="isAccordianOpen?'#25B1C4':'#fff'" [style.color]="isAccordianOpen?'#fff':'#000'">
+class="w-full mt-5 border-[2px] border-[#33B5CC] rounded-[45px] shadow-[0px_5px_0px_0px_#33B5CC] hover:scale-125" data-aos="fade-left" [style.background-color]="isAccordianOpen?'#25B1C4':'#fff'" [style.color]="isAccordianOpen?'#fff':'#000'">
     
     <div class="w-full  flex flex-col p-[25px]">
         <div class="w-full flex flex-row justify-evenly ">
