software-development page work by rudhi

--- a/src/app/pages/products/software-development/software-development.component.html
+++ b/src/app/pages/products/software-development/software-development.component.html
@@ -1,1 +1,167 @@
-<p>software-development works!</p>
+<section class="w-full flex flex-col">
+    <div class="w-full flex flex-row flex-wrap justify-between mt-[150px]">
+        <div class="w-full md:w-[38%] flex flex-col justify-center items-start gap-5">
+            <h2 class="text-[40px] md:text-[60px] text-black font-bold">
+                Make The Best Software for your business
+            </h2>
+            <p>
+                Welcome to Clumps Software Solutions, where we are committed to empowering businesses with innovative
+                solutions. With a passion for technology and a focus on delivering exceptional results, we specialize in
+                providing cutting-edge software solutions tailored to meet your unique needs.
+            </p>
+            <p>
+                Don't waste time and money recruiting and onboarding . Clumps software solutions will give the best
+                software to run your business with faster implementation .
+            </p>
+            <p>
+                Custom Software Development Services From Dedicated Developers With Vast Industry-Specific Experience
+            </p>
+            <button type="button"
+                class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] bg-black text-[#fff] mt-5">Book
+                a consultation </button>
+        </div>
+        <div class="w-full md:w-[48%] flex justify-end">
+            <img class="h-auto" src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-1.png"
+                alt="homepage" data-aos="zoom-in" data-aos-duration="1000" />
+        </div>
+    </div>
+</section>
+<section class="flex flex-col mt-[100px]">
+    <div class="flex flex-col gap-5 justify-center items-center text-center">
+        <h2 class=" w-[80%] text-[30px] font-bold text-[#33B5CC]">
+            Custom Software Development Services From Dedicated Developers With Vast Industry-Specific Experience
+        </h2>
+    </div>
+    <div class="w-full flex flex-col md:flex-row justify-center items-center mt-[50px]">
+        <div class="w-full md:w-[40%] flex flex-col">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-2.png" />
+        </div>
+        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-2">
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4685251-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Custom Software Development
+                    </h2>
+                    <p>
+                        Our custom web development solutions accelerate workflows, boost revenues, and optimize business operations from concept-to-code and development-to-deployment.
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7060983-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Implementation & Deployment
+                    </h2>
+                    <p>
+                        We devise an in-depth, comprehensive development process including software implementation & deployment plan, assessing your needs to deliver an enhanced user experience for end-users.
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/8267880-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        API Development
+                    </h2>
+                    <p>
+                        We develop reliable, well-documented, and easy-to-consume APIs that enable flexible integrations and customization of existing software products.
+                    </p>
+                </div>
+            </div>
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7182359-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        System Integrations
+                    </h2>
+                    <p>
+                        Our software integration engineers adopt new technologies and processes to overcome challenges relating to everything from architectural design to testing to execution.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full flex flex-col-reverse md:flex-row justify-center items-center mt-[50px]">
+        
+        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-5">
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4685251-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Custom Software Development
+                    </h2>
+                    <p>
+                        Our custom web development solutions accelerate workflows, boost revenues, and optimize business operations from concept-to-code and development-to-deployment.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7060983-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        Implementation & Deployment
+                    </h2>
+                    <p>
+                        We devise an in-depth, comprehensive development process including software implementation & deployment plan, assessing your needs to deliver an enhanced user experience for end-users.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/8267880-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        API Development
+                    </h2>
+                    <p>
+                        We develop reliable, well-documented, and easy-to-consume APIs that enable flexible integrations and customization of existing software products.
+                    </p>
+                </div>
+            </div>
+
+            <div class="flex flex-row gap-5">
+                <div class="w-[20%] md:w-[15%]">
+                    <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7182359-1.png"
+                        alt="">
+                </div>
+                <div class="w-[78%] md:w-[80%] flex flex-col">
+                    <h2 class="text-[#33B5CC] text-[20px]">
+                        System Integrations
+                    </h2>
+                    <p>
+                        Our software integration engineers adopt new technologies and processes to overcome challenges relating to everything from architectural design to testing to execution.
+                    </p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="w-full md:w-[40%] flex flex-col">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-3.png" />
+        </div>
+    </div>
+
+</section>
