--- a/src/app/pages/products/web-development/web-development.component.html
+++ b/src/app/pages/products/web-development/web-development.component.html
@@ -326,11 +326,11 @@
             Why Brands Choose Us For Contentful Development
         </h2>
     </div>
-    <div class="w-full flex flex-row justify-center items-center  gap-5 gap-y-10">
-        <div class="w-[50%] flex flex-col gap-5">
+    <div class="w-full flex flex-col md:flex-row justify-center items-center  gap-5 gap-y-10">
+        <div class="w-full md:w-[50%] flex flex-col gap-5">
             <img src="{{hostUrl}}assets/frontent_files/img/services/contentful-development.png"/>
         </div>
-        <div class="w-[48%] flex flex-col">
+        <div class="w-full md:w-[48%] flex flex-col">
             <p class="text-[25px] font-semibold text-[#33B5CC] mb-3">When it comes to Contentful Development, there are plenty of reasons why people choose Clumps .</p>
             <p>Ability to integrate Contentful with other systems
                 Agile Contentful design and development methodology
@@ -342,7 +342,6 @@
                 In-house, front-end experts: Strategy, Business Analysts, UX/UI Specialists & Designers
                 Proven track record of successful web and Contentful development project delivery.</p>
         </div>
-
     </div>
     
 </section>
