--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,9 +16,49 @@
         <div class="w-full md:w-[48%] flex justify-end">
             <img class="h-auto" src="{{hostUrl}}assets/frontent_files/img/homepage/homepage-img-one.png" alt="homepage"
                 data-aos="zoom-in" data-aos-duration="1000" />
+            <!-- <div class="banner-animation-image">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img1.png"
+                    class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img2.png"
+                    class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img3.png"
+                    class="wow animate__animated animate__fadeInRight" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img4.png"
+                    class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img5.png"
+                    class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img6.png"
+                    class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img7.png"
+                    class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img8.png"
+                    class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img9.png"
+                    class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img10.png"
+                    class="wow animate__animated animate__fadeInRight" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img11.png"
+                    class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/img12.png"
+                    class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1000ms"
+                    alt="image" data-speed="0.06" data-revert="true">
+                <img src="../../assets/frontent_files/img/main-banner/banner-two/main-pic.png" alt="image">
+            </div> -->
         </div>
     </div>
-    <div class="w-full flex flex-row lg:justify-evenly mt-[150px] overflow-x-scroll lg:overflow-hidden gap-5" data-aos="flip-up">
+    <div class="w-full flex flex-row lg:justify-evenly mt-[150px] overflow-x-scroll lg:overflow-hidden gap-5"
+        data-aos="flip-up">
         <div class="w-[150px]">
             <svg xmlns="http://www.w3.org/2000/svg" width="125" height="48" viewBox="0 0 125 48" fill="none"
                 data-aos="flip-up">
@@ -161,7 +201,7 @@
                 Step-by-Step Guide to <br /> Achieving Your Business Goals
             </span>
         </div>
-        <div class="w-full hover:scale-[102%]" *ngFor="let item of WorkProgress" >
+        <div class="w-full hover:scale-[102%]" *ngFor="let item of WorkProgress">
             <app-accodian [workprogress]="item"></app-accodian>
 
         </div>
@@ -179,7 +219,8 @@
             </span>
         </div>
         <div class="w-full flex flex-col md:flex-row gap-5 bg-black p-10 rounded-[45px] mt-[100px]">
-            <div class="flex flex-col w-full md:w-[33%] border-b-2 md:border-b-0 md:border-r-2 px-[10px]" data-aos="flip-up">
+            <div class="flex flex-col w-full md:w-[33%] border-b-2 md:border-b-0 md:border-r-2 px-[10px]"
+                data-aos="flip-up">
                 <p class="text-[#FFF] ">
                     For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in
                     website traffic and a 25% increase in sales.
@@ -196,7 +237,8 @@
 
                 </p>
             </div>
-            <div class="flex flex-col w-full md:w-[33%] border-b-2 md:border-b-0 md:border-r-2 px-[10px]" data-aos="flip-up">
+            <div class="flex flex-col w-full md:w-[33%] border-b-2 md:border-b-0 md:border-r-2 px-[10px]"
+                data-aos="flip-up">
                 <p class="text-[#FFF] ">
                     For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for
                     key keywords and a 200% increase in organic traffic.
@@ -300,7 +342,8 @@
             <div class="w-full md:w-[50%] p-20px">
                 <app-contact-us></app-contact-us>
             </div>
-            <div class="w-full hidden  md:w-[50%] p-20px md:flex md:flex-col justify-center items-end relative bg-right	bg-no-repeat overflow-hidden">
+            <div
+                class="w-full hidden  md:w-[50%] p-20px md:flex md:flex-col justify-center items-end relative bg-right	bg-no-repeat overflow-hidden">
                 <div class="w-full ">
                     <div class="w-auto absolute right-[-35%] top-0" data-aos="fade-left">
                         <img src="{{hostUrl}}assets/frontent_files/img/homepage/zig-zag-circle-pattern.png" alt="">
